# MemAug

./: .env.example  .gitignore  README.md  inference_with_retrieval.py  pyproject.toml  run_inference_with_retrieval.py  train_improved.py  train_with_ast_memory.py
config/: config.yaml
docs/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  FUNCTIONAL_ARCHITECTURE.md  LEARNABLE_RETRIEVAL_GATE.md  MEMORY_ARCHITECTURE.md
src/mem_aug/components/datagen/: build_all_templates.py  build_edit_sequence_dataset.py  build_fim_dataset.py  build_training_dataset.py  copy_prev_ast_as_input.py  generate_ast_diffs.py  generate_code_task.py  generate_commit_ast.py  generate_diff_string.py  generate_enhanced_tasks.py  generate_reasoning.py  generate_retrieval_labels.py  generate_tasks.py  run_pipeline.py  verify_edit_sequences.py
src/mem_aug/components/memory/: enhanced_external_memory.py  external_memory.py  hybrid_model.py
src/mem_aug/utils/: __init__.py  advanced_lora_trainer.py  build_training_template.py  cleanup_dataset.py  compare_repos.py  extract_ast_hops.py  generate_unified_diffs.py  gradient_handler.py  test_llm.py
tests/: README.md  quick_train_test.py  run_all_tests.py  run_complete_training_demo.py  test.py  test_advanced_lora_trainer.py  test_gated_retrieval.py  test_hybrid_architecture.py  test_inference_demo.py  test_optimized_gating.py  test_peft_integration.py  test_save_load_model.py
